--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     <div class="container">
       <header>
         <div class="head">
-          <img class="logo" src="./img/sahal logo.svg" alt="School Logo" />
+          <img class="logo" src="./img/school-solid-full.svg" alt="School Logo" />
           <h2>
             His Imperial Majesty Iku Baba Yeye Oba Abimbola Akeem Owoade 1,
             Alaafin Oyo Jamb Practice App
