--- a/results.html
+++ b/results.html
@@ -27,8 +27,8 @@
         <div class="head">
           <img
             class="logo"
-            src="./img/alaafin logo.svg"
-            alt="alaafin Logo"
+            src="./img/school-solid-full.svg"
+            alt="school Logo"
           />
           <h2>His Imperial Majesty Iku Baba Yeye Oba Abimbola Akeem Owoade 1, Alaafin Oyo Jamb Practice App</h2>
           <div class="subject-tab" id="subject-tab"></div>
