--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <header>
         <div class="head">
-          <img class="logo" src="./img/school-solid-full.svg" alt="School Logo" />
+          <img class="logo" src="./img/alaafin-oyo-2.jpeg" alt="alaafin picture" />
           <!-- nav -->
           <nav>
             <li><a href="#about">About</a></li>
