--- a/results.html
+++ b/results.html
@@ -25,11 +25,7 @@
   <body>
     <header>
         <div class="head">
-          <img
-            class="logo"
-            src="./img/school-solid-full.svg"
-            alt="school Logo"
-          />
+          <img class="logo" src="./img/alaafin-oyo-2.jpeg" alt="alaafin picture" />
           <h2>His Imperial Majesty Iku Baba Yeye Oba Abimbola Akeem Owoade 1, Alaafin Oyo Jamb Practice App</h2>
           <div class="subject-tab" id="subject-tab"></div>
       </header>
